// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renderToText > matches snapshot for box-arrows.yaml 1`] = `
"
                                ─response─
┌────────────────┐ ┌──────────────────────────────────┐ ┌────────────┐            ┌──────────────┐            ┌───────────┐
│                │ │          ┌────────────┐          │ │            │            │              │   ─write─  │           │
│                ◀─┘          │            ─forward─  └─■            ─enqueue─────□ Async Worker ╶────────────◇ Audit Log │
│ Browser Client ─request─────▶ Edge Proxy ╶──────┐     │ API Server O──────┘     │              │            │           │
│                ╶──────┘     │            │      └─────●            │            └──────────────┘            └───────────┘
│                │            └────────────┘            │            │
└────────────────┘                                      └────────────┘

Nodes:
- client: Browser Client
- proxy: Edge Proxy
- server: API Server
- worker: Async Worker
- audit: Audit Log

Edges:
- client -> proxy: request
- proxy -> server: forward
- server -> worker: enqueue
- worker -> audit: write
- server -> client: response
"
`;

exports[`renderToText > matches snapshot for database.yaml 1`] = `
"

         ─session lookup─   ┌───────────┐
 ┌─────────────┐            │           │
 │             │      ┌─────O   Redis   │
 │             ╶──────┘     │           │
 │             ─writes─     └───────────┘
 │ Application ╶──────┐                                       ┌─────────────────┐
 │             │      │       ─reads─                         │                 │
 │             ╶──────┼───────────────────────────┐     ┌─────▶ Dataset Catalog │
 │             │      │                    ─schema changes─   │                 │
 └─────────────┘      │     ┌────────────────────┐│     │     └─────────────────┘
                      │     │                    ││     │                                       ┌────────────────┐
                      │     │                    ◆streaming─                                    │                │
                      └─────● PostgreSQL Primary ││                                       ┌─────◇ Analytics View │
                            │                    □┼─────┐                                 │     │                │
                            │                    ││     │     ┌────────────────────┐      │     └────────────────┘
                            └────────────────────┘│     │     │                    ─snapshots─
                                                  └─────┼─────▶                    │      │
                                                        │     │ PostgreSQL Replica ╶──────┘
                                                        └─────□                    │
                                                              │                    │
                                                              └────────────────────┘

Nodes:
- app: Application
- cache: Redis
- primary: PostgreSQL Primary
- replica: PostgreSQL Replica
- analytics: Analytics View
- catalog: Dataset Catalog

Edges:
- app -> cache: session lookup
- app -> primary: writes
- app -> replica: reads
- primary -> replica: streaming
- replica -> analytics: snapshots
- primary -> catalog: schema changes
"
`;

exports[`renderToText > matches snapshot for flowchart.yaml 1`] = `
"

  ┌───────────┐
  │   Start   │
  └─────●─────┘
        │
        │
        │
        │
        │
        │
 ┌──────▼──────┐
 │             │
 │ Load Config ╶──────┐
 │             │      │     ┌──────────┐
 └──────▲──────┘      │     │          │
        │             └─────▶          │
        │                   │  Valid?  │
        │ retry      ┌──────╴          │
        │            │      │          │
  ┌─────O────┐       │      └─────╷────┘
  │          │ ─no─  │            │
  │  Reject  ◇───────┘            │ yes
  │          │            ┌───────●───────┐
  └──────────┘            │               │
                 ┌────────╴ Generate Plan │
                 │        │               │
                 │        └───────────────┘
                 │
                 │
                 │
                 │
                 │┌──────────┐
                 ││          │
                 ││   Done   ■─┐
                 ││          │ │
                 │└──────────┘ │
                 └─────────────┘

Nodes:
- start: Start
- load: Load Config
- check: Valid?
- process: Generate Plan
- reject: Reject
- end: Done

Edges:
- check -> process: yes
- check -> reject: no
- reject -> load: retry
"
`;

exports[`renderToText > matches snapshot for infra.yaml 1`] = `
"

         ┌──────────┐
         │  Global  │
         │   DNS    │
         └──╷────╷──┘
         ┌──┼────┼─────────┐
         │ us-east route   │
         │ │     │         │
         │ │     └┐        │
         │ │      │        │
         │ │      │        │
         │ │┌─────●────┐   │
         │ ││   VPC    │   │
         │ ││   East   │   │
         │ │└─────╷────┘   │
         │ │      │        │
         │ │      │        │
         │ │      │ private│
         │ │      │ ingress│
         │ │      │        │
         │ │      │        │
         │ │┌─────▼─────┐  │
         │ ││  Compute  │  │
         │ ││   East    │  │
         │ │└─────╷─────┘  │
         │ │      │        │
         │ │      │        │
         │ │      │        │
         │ │      │ jobs   │
         │ │      │        │
         │ │      │        │
         │ │┌─────□─────┐  │
         │ ││   Queue   │  │
         │ ││   East    │  │
         │ │└─────╷─────┘  │
         │ │      │        │
         │ │      │        │
         │ │      │        │
         │ │      │ persist│
         │ │      │        │
         │ │ route│        │
         │ │┌─────▼────┐   │
         │ ││    DB    │   │
         │ ││   East   │   │
         │ │└─────◆────┘   │
         │ │      │        │
         └─┼──────┼────────┘
           │      │
           │      │
  ┌────────┼──────┼─┐
  │ us-west│      │ │
  │        │      │ │
  │        │      │ │
  │        │      │ │
  │        │      │ │
  │        │      │ │
  │        │      │ │
  │        │      │ │
  │        │      │ │
  │        │      │ │
  │        │      │ │
  │        │      │ │
  │        │      │ │
  │        │      │ │
  │        │      │ │
  │        │      │ │
  │        │      │ │
  │        │      │ │
  │        │      │ │
  │        │      │ │
  │        │      │ │
  │        │      │ │
  │     replicate │ │
  │  ┌─────●────┐ │ │
  │  │   VPC    │ │ │
  │  │   West   │ │ │
  │  └─────╷────┘ │ │
  │        │      │ │
  │        │      │ │
  │        │ private│
  │        │ ingress│
  │        │      │ │
  │        │      │ │
  │  ┌─────▼─────┐│ │
  │  │  Compute  ││ │
  │  │   West    ││ │
  │  └─────╷─────┘│ │
  │        │      │ │
  │        │      │ │
  │        │      │ │
  │        │ jobs │ │
  │        │      │ │
  │        │      │ │
  │  ┌─────□─────┐│ │
  │  │   Queue   ││ │
  │  │   West    ││ │
  │  └─────╷─────┘│ │
  │        │      │ │
  │        │ persist│
  │        │      │ │
  │     ┌──┘      │ │
  │     │    ┌────┘ │
  │     │    │      │
  │  ┌──▼────◆──┐   │
  │  │    DB    │   │
  │  │   West   │   │
  │  └──────────┘   │
  │                 │
  └─────────────────┘

Nodes:
- dns: Global DNS
- vpc-east: VPC East
- compute-east: Compute East
- db-east: DB East
- queue-east: Queue East
- vpc-west: VPC West
- compute-west: Compute West
- db-west: DB West
- queue-west: Queue West

Groups:
- region-east: us-east
- region-west: us-west

Edges:
- dns -> vpc-east: route
- dns -> vpc-west: route
- vpc-east -> compute-east: private ingress
- compute-east -> queue-east: jobs
- queue-east -> db-east: persist
- vpc-west -> compute-west: private ingress
- compute-west -> queue-west: jobs
- queue-west -> db-west: persist
- db-east -> db-west: replicate
"
`;

exports[`renderToText > matches snapshot for microservice.yaml 1`] = `
"

    ┌─────────────────────────────────────────────────────────────────────────┐
    │ Customer Experience                                                     │
    │                                                                         │
    │               ┌──────────────┐                           ┌───────────┐  │
    │               │              │                           │           │  │
    │               │ Notification │                           │    API    │  │
    │               │   Service    ◀───────────────────┐ ┌─────╴  Gateway  │  │
    │               │              │                   │ │     │           │  │
    │               └──▲────▲───▲──┘                   │ │     └─────╷─────┘  │
    │                  │    │   │                      │ │           │        │
    │                  └──┐ │   └┐                     │ │           │        │
    │                     │ │    │                     │ │           │        │
    │                     │ │    │                     │ │           │        │
    │        ┌───────────┐│ │    │    ┌───────────┐    │ │     ┌─────▼────┐   │
    │        │           ││ │    │    │           │    │ │     │          │   │
    │        │   Cart    ││ │    │    │           ◀────┼─┘     │  Mobile  │   │
    │        │  Service  ◀┼─┼───┐│    │    Web    │    │ ┌─────╴   BFF    │   │
    │        │           ││ │   └┼────╴    BFF    │    │ │     │          │   │
    │        └─╷───╷───▲─┘│ │    │    │           ╶────┼─┼┐    └─────╷────┘   │
    │          │   │   │  │ │  order  │           │    │ ││          │        │
    │          │   └──┐│  │ │ updates └─────╷─────┘─async─│          │        │
    │         ┌┘      ││  │ │    │          │      ─alerts─          │        │
    │         │       ││  │ │    └──────────┼──────────┼─┼┼──────────┼───────┐│
    │  ┌──────▼─────┐ ││  │ receipts  ┌─────▼─────┐    │ ││    ┌─────▼─────┐ ││
    │  │            │ ││  │ │         │           │    │ ││    │           │ ││
    │  │  Checkout  │ ││  │ │         │           ◀────┼─┘│    │  Catalog  │ ││
    │  │  Service   ╶ ││  │ │         │   Auth    │    │  └────▶  Service  ◀─┼┼──────────────────────┐
    │  │            │ ││  │ │         │  Service  │    │       │           │ ││                      │
    │  └──────╷─────┘┐││  │ │         │           ╶─┐  │       └──╷─────╷──┘ ││                      │
    │         │      │││  │ │         │           │ └──┼──────────┼─────┼───┐││                      │
    │         │      │││ stock        └─────╷─────┘    │          └───┐ │   │││                      │
    │         │      │││ sync───────────────┼┐         │       ┌──────┼─┘   │││                      │
    │         │      │││  │           ┌─────┘│         │       │      │     │││                      │
    │         │      │││  │     ┌─────▼─────┐│shipping │ ┌─────▼─────┐│     │││                      │
    │         │      │││  │     │           ││updates  │ │           ││     │││                      │
    │         │      │││  │     │   Users   ││         │ │  Search   ││     │││                      │
    │      ┌──┼──────┼┼┼──┘     │  Service  ╶┼┐        │ │  Service  ╶┼─────┼┼┼────────┐             │
    │      │  │ authorize       │           │││        │ │           ││     │││        │             │
    └──────┼──┼──────┼┼┼────────└───────────┘┼┼────────┼─└───────────┘┼─────┼┼┘        │             │
           │  │      │││                     │└────────┼──────────────┼─────┼┼──┐      │             │ featured
           │  │      │└┼─────────┐           │         │              │     ││  │      │             │  items
  ┌────────┼──┼──────┼─┼─────────┼───────────┼─────────┼──────────────┼─────┼┼──┼──────┼─────────────┼──────────────────────────────────┐
  │ Commerce Platform└─┼─────────┼───┐       │         │              │     ││login    │             │                                  │
  │        │  │        └───place─┼──┐│       │         │              │     ││events   │             │                                  │
  │        │  │           ─order─│  ││       │         │              │     ││  │      │             │                                  │
  │        │  │                  │  ││       │         │              │     ││  │      │             │                                  │
  │     ┌──┼──┘                  │  ││       │         │      ┌───────┘     ││  │      │             │                                  │
  │     │  │                     │  ││       │         │      │             ││  │      │             │                                  │
  │     │  │                     │  ││       │         │      │             ││  │      │             │                                  │
  │     │  │                     │  ││       │         │      │             ││  │      │             │                                  │
  │     │  │                     │  ││       │         │      │             ││  │      │             │                                  │
  │     │  │                     │ reserve  ┌┘         │      │      ┌──────┼┘  │      │┌───────────┐│                                  │
  │     │  │                     │  stock   │          │      │      │      │   │      ││           ││             ┌─────────────────┐  │
  │     │  │ ┌───────────┐       │  │└┌─────╵─────┐    │      │┌─────●─────┐│   │      ││   Audit   ││             │                 │  │
  │     │  │ │           │       │  │ │           │    │live  ││   Event   │└───┼──────┼▶  Service  │└─────────────╴                 │  │
  │     │  │ │  Config   │       │  │ ●           │    prices ││    Bus    │    │      ││           │              │                 │  │
  │     │  │ │  Service  ╶──────┐│  │ │           │    │      │└─────╷─────┘    │      │└───────────┘            ┌─▶                 │  │
  │     │  │ │           │      ││  │ │  Orders   │    │      │      │          │      └─────────────────────────┘ │ Recommendations │  │
  │     │  │ └─────╷─────┘      └┼──┼─▶  Service  ╶────┼──────┼──────┼┐         │             ─personalize─        │     Service     │  │
  │     │  │       │             │  │ │           │    │      │      ││         └──────────────────────────────────▶                 │  │
  │     │  │       │        ┌────┼──┼─╴           │    │      │      ││                     ─preferences─          │                 │  │
  │     │  └┼───┐──┘        │    │  └┐│           │    │      │      ││                 ┌─────────────┐ ┌──────────╴                 │  │
  │     │   │   │           │    │   │└─────╷─────┘    └──────┼──────┼┼───────────────┐ │             │ │          │                 │  │
  │  ┌──◇───▼───╵─┐         │  ┌─□───╵───◀─┐┘           ┌─────▼─────┐││               └─╴             │ │          └─────────────────┘  │
  │  │            │         │  │           │            │           ││└─────────────┐   │ Fulfillment │ │                               │
  │  │  Payments  │         │  │ Inventory │            │  Pricing  ││              │   │   Service   │ │                               │
  │  │  Service   ◀─────────┘  │  Service  ╶────────────▶  Service  │└──────────────┼───▶             │ │                               │
  │  │            │            │           │            │           │               │   │             │ │                               │
  │  └────────────┘            └───────────┘            └───────────┘               │   └──────╷──────┘ │                               │
  │                                                                                 │          │        │                               │
  │                                                                                 │     ┌────┘        │                               │
  │                                                                              ┌──▼─────▼──┐          │                               │
  │                                                                              │           │          │                               │
  │                                                                              │ Analytics │          │                               │
  │                                                                              │  Service  ◀──────────┘                               │
  │                                                                              │           │                                          │
  └──────────────────────────────────────────────────────────────────────────────└───────────┘──────────────────────────────────────────┘

Nodes:
- gateway: API Gateway
- web-bff: Web BFF
- mobile-bff: Mobile BFF
- auth: Auth Service
- users: Users Service
- catalog: Catalog Service
- search: Search Service
- cart: Cart Service
- checkout: Checkout Service
- notifications: Notification Service
- orders: Orders Service
- payments: Payments Service
- inventory: Inventory Service
- pricing: Pricing Service
- fulfillment: Fulfillment Service
- analytics: Analytics Service
- recommendations: Recommendations Service
- event-bus: Event Bus
- config: Config Service
- audit: Audit Service

Groups:
- customer-experience: Customer Experience
- commerce-platform: Commerce Platform

Edges:
- checkout -> orders: place order
- checkout -> payments: authorize
- cart -> inventory: reserve stock
- catalog -> pricing: live prices
- search -> recommendations: personalize
- auth -> audit: login events
- users -> recommendations: preferences
- orders -> notifications: order updates
- payments -> notifications: receipts
- inventory -> cart: stock sync
- recommendations -> catalog: featured items
- event-bus -> notifications: async alerts
- fulfillment -> notifications: shipping updates
"
`;

exports[`renderToText > matches snapshot for minimal.yaml 1`] = `
"

  ┌───────────┐
  │    API    │
  └─────╷─────┘
        │
        │
        │
        │
        │
        │
  ┌─────▼────┐
  │ Database │
  └──────────┘

Nodes:
- api: API
- db: Database
"
`;

exports[`renderToTextFromSvg > matches snapshot for box-arrows.yaml 1`] = `
"


                        ┌────────────response─────┐
   ┌────────────────┐   │                         │           ┌────────────┐           ┌──────────────┐         ┌───────────┐
   │                │   │           ┌────────────┐│           │            │           │              │         │           │
   │                │◀──┘           │            │└──────────■│            │─enqueue─  │              │         │           │
   │ Browser Client │               │            │            │ API Server │O─────────□│ Async Worker │─write──◇│ Audit Log │
   │                │────request───▶│ Edge Proxy │─forward───●│            │           │              │         │           │
   └────────────────┘               │            │            └────────────┘           └──────────────┘         └───────────┘
                                    └────────────┘

Nodes:
- client: Browser Client
- proxy: Edge Proxy
- server: API Server
- worker: Async Worker
- audit: Audit Log

Edges:
- client -> proxy: request
- proxy -> server: forward
- server -> worker: enqueue
- worker -> audit: write
- server -> client: response
"
`;

exports[`renderToTextFromSvg > matches snapshot for database.yaml 1`] = `
"


                                               ┌─────────┐
   ┌─────────────┐                             │         │
   │             │───────────session lookup───O│  Redis  │
   │ Application │─┐                           │         │
   │             │┐│                           └─────────┘
   └─────────────┘││
                  ││
                  ││                                                                                   ┌─────────────────┐
                  ││ writes                                                                            │                 │
                  ││                           ┌────────────────────┐                                  │                 │
                  ││                           │                    │◆───────────────schema changes───▶│ Dataset Catalog │
                  ││                           │                    │                                  │                 │
                  │└──────────────────────────●│ PostgreSQL Primary │                                  │                 │
                  │                            │                    │□──┐                              └─────────────────┘
                  │                            └────────────────────┘   │
                  │                                                     │
                  │                                                     │
                  │                                                     │
                  │                                                     │                              ┌────────────────────┐             ┌────────────────┐
                  │                                                     │ streaming                    │                    │             │                │
                  └─────────────────────────────reads───────────────────┼─────────────────────────────▶│                    │             │                │
                                                                        │                              │ PostgreSQL Replica │─snapshots──◇│ Analytics View │
                                                                        └─────────────────────────────□│                    │             │                │
                                                                                                       └────────────────────┘             └────────────────┘

Nodes:
- app: Application
- cache: Redis
- primary: PostgreSQL Primary
- replica: PostgreSQL Replica
- analytics: Analytics View
- catalog: Dataset Catalog

Edges:
- app -> cache: session lookup
- app -> primary: writes
- app -> replica: reads
- primary -> replica: streaming
- replica -> analytics: snapshots
- primary -> catalog: schema changes
"
`;

exports[`renderToTextFromSvg > matches snapshot for flowchart.yaml 1`] = `
"


    ┌─────────────┐
    │    Start    │
    └─────────────┘
           ●
           │
           ▼
    ┌─────────────┐
    │ Load Config │
    └─────────────┘
        ▲     └────────────────┐
        │                      │
        │                      ▼
        │                ┌──────────┐
        │ retry          │  Valid?  │
        │                └──────────┘
        │     ┌────no───────┘     │
        │     │              yes  │
        O     ◇                   ●
    ┌─────────────┐       ┌───────────────┐
    │   Reject    │       │ Generate Plan │
    └─────────────┘       └───────────────┘
                                  │
                                  │
                                  ■
                          ┌───────────────┐
                          │     Done      │
                          └───────────────┘

Nodes:
- start: Start
- load: Load Config
- check: Valid?
- process: Generate Plan
- reject: Reject
- end: Done

Edges:
- check -> process: yes
- check -> reject: no
- reject -> load: retry
"
`;

exports[`renderToTextFromSvg > matches snapshot for infra.yaml 1`] = `
"


                                      ┌──────────────────────────────┐
                                      │          Global DNS          │
                                      └──────────────────────────────┘
                                              │  route   │
        ┌─────────────────────────────────────┘          │
        │         ┌┄us-east┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄●┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┐
        │         ┆                       ┌────────────────────────────┐  ┆
        │         ┆                       │          VPC East          │  ┆
        │         ┆                       └────────────────────────────┘  ┆
        │         ┆                                     │ private ingress ┆
        │         ┆                                     │                 ┆
        │         ┆                                     ▼                 ┆
        │         ┆                    ┌─────────────────────────────────┐┆
        │         ┆                    │          Compute East           │┆
        │         ┆                    └─────────────────────────────────┘┆
        │ route   ┆                                     │                 ┆
        │         ┆                              jobs   │                 ┆
        │         ┆                                     □                 ┆
        │         ┆                     ┌───────────────────────────────┐ ┆
        │         ┆                     │          Queue East           │ ┆
        │         ┆                     └───────────────────────────────┘ ┆
        │         ┆                              persist │                ┆
        │         ┆                                      │                ┆
        │         ┆                                      ▼                ┆
        │         ┆                        ┌──────────────────────────┐   ┆
        │         ┆                        │         DB East          │   ┆
        │         ┆                        └──────────────────────────┘   ┆
        │         └┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄◆┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┘
        └─────────────────┐                              │
    ┌┄us-west┄┄┄┄┄┄┄┄┄┄┄┄┄│┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄│┄┄┄┄┄┄┄┄┄┄┐
    ┆                     ●                              │          ┆
    ┆  ┌─────────────────────────────────────┐           │          ┆
    ┆  │              VPC West               │           │          ┆
    ┆  └─────────────────────────────────────┘           │          ┆
    ┆                      │ private ingress             │          ┆
    ┆                      │                             │          ┆
    ┆                      ▼                             │          ┆
    ┆┌──────────────────────────────────────────┐        │          ┆
    ┆│               Compute West               │        │          ┆
    ┆└──────────────────────────────────────────┘        │          ┆
    ┆                     │                              │ replicate┆
    ┆              jobs   │                              │          ┆
    ┆                     □                              │          ┆
    ┆ ┌───────────────────────────────────────┐          │          ┆
    ┆ │              Queue West               │          │          ┆
    ┆ └───────────────────────────────────────┘          │          ┆
    ┆                    │             ┌─────────────────┘          ┆
    ┆                    │ persist     │                            ┆
    ┆                    ▼             ◆                            ┆
    ┆            ┌─────────────────────────────┐                    ┆
    ┆            │           DB West           │                    ┆
    ┆            └─────────────────────────────┘                    ┆
    └┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┘

Nodes:
- dns: Global DNS
- vpc-east: VPC East
- compute-east: Compute East
- db-east: DB East
- queue-east: Queue East
- vpc-west: VPC West
- compute-west: Compute West
- db-west: DB West
- queue-west: Queue West

Groups:
- region-east: us-east
- region-west: us-west

Edges:
- dns -> vpc-east: route
- dns -> vpc-west: route
- vpc-east -> compute-east: private ingress
- compute-east -> queue-east: jobs
- queue-east -> db-east: persist
- vpc-west -> compute-west: private ingress
- compute-west -> queue-west: jobs
- queue-west -> db-west: persist
- db-east -> db-west: replicate
"
`;

exports[`renderToTextFromSvg > matches snapshot for microservice.yaml 1`] = `
"

                                           ┌───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
                                           │                                                                          ┌────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐               │
                                           │                                                                          │                                                                                                                                                                    │               │
                ┌┄Customer Experience┄┄┄┄┄┄│┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄│┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┐                                                                                                             │               │
                ┆                          │  ┌──────────────────────────────────────────────────────────────────────┐│      ┌──────────────────────────────┐                ┆                                                                                                             │               │
                ┆                          │  │                                                                      ││      │                              │                ┆                                                                                                             │               │
                ┆                          │  │                         Notification Service                         ││  ┌───│         API Gateway          │───────┐        ┆                                                                                                             │               │
                ┆                          │  └──────────────────────────────────────────────────────────────────────┘│  │   └──────────────────────────────┘       │        ┆                                                                                                             │               │
                ┆                          │           ▲                 ▲                ▲                 ▲         │  │                                          │        ┆                                                                                                             │               │
                ┆                          │           │                 │                │                 │         │  │                                          │        ┆                                                                                                             │               │
   ┌───────────────────────────────────────┼───────────┘                 │                │                 └─────────┼──┼──────────────────────────────────────────┼──────────────────────────────────────────────────────────────────────────────────────────────────┐                   │               │
   │            ┆                          └─────────────────────────────┘                └───────────────────────────┘  │                                          │        ┆                                                                                         │                   │               │
   │            ┆                                                                                                        │                                          │        ┆                                                                                         │                   │               │
   │            ┆                                                                      ┌───────────────────────────┐     │          ┌───────────────────────────┐   │        ┆                                                                                         │                   │               │
   │            ┆                                                                      │                           │◀────┘          │                           │   │        ┆                                                                                         │                   │               │
   │            ┆                                                   ┌──────────────────│          Web BFF          │            ┌───│        Mobile BFF         │◀──┘        ┆                                                                                         │                   │               │
   │            ┆                                                   │                  │                           │─────┐      │   │                           │            ┆                                                                                         │                   │               │
   │            ┆                                                   │                  └───────────────────────────┘     │      │   └───────────────────────────┘            ┆                                                                                         │                   │               │
   │            ┆                                                   │                                     │              │      │                 └──┐                       ┆                                                                                         │                   │               │
   │            ┆                                                   │                                     │              └──┐   │                    │                       ┆                                                                                         │                   │               │
   │            ┆                                                   │                                     ▼                 │   │                    ▼                       ┆                                                                                         │                   │               │
   │            ┆                  ┌────────────────────────────┐   │                   ┌──────────────────────────────────┐│   │    ┌───────────────────────────────┐       ┆                                                                                         │                   │               │
   │            ┆                  │                            │   │                   │                                  │◀───┘    │                               │       ┆                                                                                         │                   │               │
   │            ┆                  │        Cart Service        │◀──┘                   │           Auth Service           │└───────▶│        Catalog Service        │─────────────────────────────────┐                                                               │                   │               │
   │            ┆                  └────────────────────────────┘                       └──────────────────────────────────┘         └───────────────────────────────┘       ┆                         │                                                               │                   │               │
   │            ┆                       │         │        ▲                                              │                                │         │         ▲             ┆                         │                                                               │                   │               │
   │            ┆                       │         │        │                                              │                                │         │         │             ┆                         │                                                               │                   │               │
   │            ┆             ┌─────────┘         └────────┼─────────┐                                    │                                │         │         └────────────────────┐                  │                                                               │                   │               │
   │            ┆             │                            │         │                                    └─────────┐                      │         └──────────┐            ┆      │                  │                                                               │                   │               │
   │            ┆             │                            │         │                                              │                 ┌────┘                    │            ┆      │                  │                                                               │                   │               │
   │            ┆             ▼                            │         │                                              ▼                 │                         ▼            ┆      │                  │                                                               │                   │               │
   │            ┆ ┌───────────────────────┐                │         │                                   ┌────────────────────┐       │              ┌────────────────────┐  ┆      │                  │                                                               │                   │               │
   │            ┆ │                       │                │         │                                   │                    │       │              │                    │  ┆      │                  │ login events                                                  │                   │               │
   │            ┆ │   Checkout Service    │                │         │                                   │   Users Service    │────┐  │              │   Search Service   │  ┆      │                  │                                                               │                   │               │
   │            ┆ └───────────────────────┘                │         │                                   └────────────────────┘    │  │              └────────────────────┘  ┆      │                  │                                                               │                   │               │
   │            ┆       │           │                      └─────────┼───────────────────┐                                         │  │                         │            ┆      │                  │                                                               │                   │               │
   │ receipts   ┆       │           │                                │                   │                                         │  │                         │            ┆      │                  │                                                               │                   │               │
   │            └┄┄┄┄┄┄┄│┄┄┄┄┄┄┄┄┄┄┄│┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄│┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄│┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄│┄┄│┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄│┄┄┄┄┄┄┄┄┄┄┄┄┘      │                  │                                                               │                   │               │
   │                    │           │                                │                   │                                         │  │                         │                   │                  │                                                               │                   │ async alerts  │
   │                    │           │                                │                   │                                         │  │                         └───────────────────┼──────────────────┼────────────────────────────────────personalize───────┐        │                   │               │
   │                    │ authorize │                                │                   │                                         │  │                                             │                  │                                                      │        │                   │               │
   │                    │           │                                │                   │                                         └──┼─────────────────────────────────────────────┼──────────────────┼────────────────────preferences─────────────────────┐ │        │                   │               │
   │                    │           │                                │ reserve stock     │                                            │                                             │                  │                                                    │ │        │                   │               │
   │                    │           │                                │                   │ stock sync                                 │                                             │                  │                                                    │ │        │                   │               │
   │                    │           │                                │                   │                                            │                                             │ featured items   │                                                    │ │        │                   │               │
   │                    │           │                                │                   │                                            │                                             │                  │                                                    │ │        │                   │               │ order updates
   │                    │           │                                │                   │                                            │                                             │                  │                                                    │ │        │ shipping updates  │               │
   │                    │           └───────────place order──────────┼───────────────────┼────────────────────┐                       │                                             │                  │                                                    │ │        │                   │               │
   │                    │                                            │                   │                    │                       │ live prices                                 │                  │                                                    │ │        │                   │               │
   │                 ┌──┘                                            │                   │                    │                       │                                             │                  │                                                    │ │        │                   │               │
   │           ┌┄┄┄┄┄│┄Commerce Platform┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄│┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄│┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄│┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄│┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄│┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄│┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄│┄│┄┄┄┄┄┄┄┐│                   │               │
   │           ┆     │            ┌────────────────────────────────┐ │                   │                    │                       │                                             │                  │               ┌───────────────────────────────────┐│ │       ┆│                   │               │
   │           ┆     │            │         Config Service         │ │                   │                    │                       │                                             │                  └──────────────▶│           Audit Service           ││ │       ┆│                   │               │
   │           ┆     │            └────────────────────────────────┘ │                   │                    │                       │                                             │                                  └───────────────────────────────────┘│ │       ┆│                   │               │
   │           ┆     │                     │               │         │                   │                    │          ┌────────┐   │                                             │                                                                       │ │       ┆│                   │               │
   │           ┆     │                     │               │         │                   │                    │          │        │   │                                             │                                                                       │ │       ┆│                   │               │
   │           ┆     │                     │               │         │                   │                    ●          │        │   │                                             │                                                                       │ │       ┆│                   │               │
   │           ┆     │                     │               │         │                   │              ┌──────────────────────┐  │   │                                             │                                                                       │ │       ┆│                   │               │
   │           ┆     │                     │               └─────────┼───────────────────┼─────────────▶│                      │  │   │                                             │                                                                       │ │       ┆│                   │               │
   │           ┆     │                     │                         │                   │              │    Orders Service    │──┼───┼─────────────────────────────────────┐       │                                                                       │ │       ┆│                   │               │
   │           ┆     │                     │ ┌───────────────────────┼───────────────────┼──────────────│                      │  │   │                                     │       │                                                                       │ │       ┆│                   │               │
   │           ┆     │                     │ │                       │                   │              └──────────────────────┘  │   │                                     │       │                                                                       │ │       ┆│                   │               │
   │           ┆     │       ┌─────────────┘ │                       │                   │             ┌────────────┘             │   │                                     │       │               ┌────────────────────┐                                  │ │       ┆│                   │               │
   └─────────────────┼───────┼──────┐        │             ┌─────────┘           ┌───────┘             │                          │   │                         ┌────────┐  │       └───────────────┼────────────────────┼────────────────────────┐         │ │       ┆│                   │               │
               ┆     │       │      │        │             │                     │                     │                          │   │                         │        │  │                       │                    │┌───────────────────────┼─────────┘ │       ┆│                   │               │
               ┆     ◇       ▼      │        │             □                     │                     ▼                          │   │                         ●        │  │                       │                    ││                       │           ▼       ┆│                   │               │
               ┆ ┌──────────────────────┐    │ ┌──────────────────────────────────────────────────────────────────┐               │   │                 ┌───────────────┐│  │   ┌───────────────────────────────────────┐││                ┌─────────────────────────┐┆│                   │               │
               ┆ │                      │    │ │                                                                  │               │   │                 │               ││  │   │                                       │││                │                         │┆│                   │               │
               ┆ │   Payments Service   │◀───┘ │                        Inventory Service                         │               │   │                 │   Event Bus   ││  └──▶│          Fulfillment Service          ││└───────────────▶│ Recommendations Service │┆│                   │               │
               ┆ └──────────────────────┘      └──────────────────────────────────────────────────────────────────┘               │   │                 └───────────────┘│      └───────────────────────────────────────┘│                 └─────────────────────────┘┆│                   │               │
               ┆                                                                 │                                                │   │                         │        │                          │                    │                              │             ┆│                   │               │
               ┆                                                                 │                                                │   │                         └────────┼─────┐              ┌─────┘                    │                              │             ┆│                   │               │
               ┆                                                                 └───────────────────────────────────────────────┐│   └───────────┐                      │     │              │                          │                              │             ┆│                   │               │
               ┆                                                                                                    ┌────────────┼┘               │              ┌───────┘     │              │                          │                              │             ┆│                   │               │
               ┆                                                                                                    │            ▼                ▼              │             ▼              ▼                          │                              │             ┆│                   │               │
               ┆                                                                                                    │   ┌──────────────────────────────────┐     │     ┌──────────────────────────────┐                  │                              │             ┆│                   │               │
               ┆                                                                                                    │   │         Pricing Service          │     │     │      Analytics Service       │◀─────────────────┼──────────────────────────────┘             ┆│                   │               │
               ┆                                                                                                    │   └──────────────────────────────────┘     │     └──────────────────────────────┘                  │                                            ┆│                   │               │
               ┆                                                                                                    └─────┐                                      └─────────┐                                             │                                            ┆│                   │               │
               └┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄│┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄│┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄│┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┘│                   │               │
                                                                                                                          │                                                │                                             └─────────────────────────────────────────────┘                   │               │
                                                                                                                          │                                                └───────────────────────────────────────────────────────────────────────────────────────────────────────────────┘               │
                                                                                                                          └────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘

Nodes:
- gateway: API Gateway
- web-bff: Web BFF
- mobile-bff: Mobile BFF
- auth: Auth Service
- users: Users Service
- catalog: Catalog Service
- search: Search Service
- cart: Cart Service
- checkout: Checkout Service
- notifications: Notification Service
- orders: Orders Service
- payments: Payments Service
- inventory: Inventory Service
- pricing: Pricing Service
- fulfillment: Fulfillment Service
- analytics: Analytics Service
- recommendations: Recommendations Service
- event-bus: Event Bus
- config: Config Service
- audit: Audit Service

Groups:
- customer-experience: Customer Experience
- commerce-platform: Commerce Platform

Edges:
- checkout -> orders: place order
- checkout -> payments: authorize
- cart -> inventory: reserve stock
- catalog -> pricing: live prices
- search -> recommendations: personalize
- auth -> audit: login events
- users -> recommendations: preferences
- orders -> notifications: order updates
- payments -> notifications: receipts
- inventory -> cart: stock sync
- recommendations -> catalog: featured items
- event-bus -> notifications: async alerts
- fulfillment -> notifications: shipping updates
"
`;

exports[`renderToTextFromSvg > matches snapshot for minimal.yaml 1`] = `
"


    ┌──────────┐
    │   API    │
    └──────────┘
          │
          │
          ▼
    ┌──────────┐
    │ Database │
    └──────────┘

Nodes:
- api: API
- db: Database
"
`;
